<resources>
    <string name="app_name">AndroidProject</string>
    <string name="id">아이디</string>
    <string name="input_id">아이디 입력</string>
    <string name="pw">비밀번호</string>
    <string name="input_pw">비밀번호 입력</string>
    <string name="check_pw">비밀번호 확인</string>
    <string name="login_btn">로그인</string>
    <string name="register">회원가입</string>
    <string name="find_user">아이디/비밀번호 찾기</string>
    <string name="name">이름</string>
    <string name="input_name">이름 또는 닉네임 입력</string>
    <string name="email">이메일</string>
    <string name="input_email">이메일 입력</string>
    <string name="register_btn">가입하기</string>
    <string name="register_cancel">취소하기</string>


</resources>