<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="30sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"/>

        <!--이름-->
        <TextView
            android:id="@+id/label1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!--이름 입력-->
        <EditText
            android:id="@+id/label2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/input_name"
            android:textColor="#000000"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/round"
            app:layout_constraintTop_toBottomOf="@id/label1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <!--아이디-->
        <TextView
            android:id="@+id/label3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/label2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!--아이디 입력-->
        <EditText
            android:id="@+id/label4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/input_id"
            android:textColor="#000000"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/round"
            app:layout_constraintTop_toBottomOf="@id/label3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <!--비밀번호-->
        <TextView
            android:id="@+id/label5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pw"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/label4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!--비밀번호 입력-->
        <EditText
            android:id="@+id/label6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/input_pw"
            android:textColor="#000000"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/round"
            app:layout_constraintTop_toBottomOf="@id/label5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <!--비밀번호 확인-->
        <TextView
            android:id="@+id/label7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_pw"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/label6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!--비밀번호 확인 입력-->
        <EditText
            android:id="@+id/label8"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/input_pw"
            android:textColor="#000000"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/round"
            app:layout_constraintTop_toBottomOf="@id/label7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <!--이메일-->
        <TextView
            android:id="@+id/label9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/label8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!--이메일 입력-->
        <EditText
            android:id="@+id/label10"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/input_email"
            android:textColor="#000000"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/round"
            app:layout_constraintTop_toBottomOf="@id/label9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/register_btn"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:background="@drawable/round"
            app:layout_constraintTop_toBottomOf="@id/label10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_btn"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/register_cancel"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:background="@drawable/round"
            app:layout_constraintTop_toBottomOf="@id/label10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
