<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/uid"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/id"
        android:textColor="#000000"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="80dp" />

    <EditText
        android:id="@+id/upw"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/pw"
        android:textColor="#000000"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/round"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/uid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        android:layout_marginTop="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/login_btn"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:background="@drawable/square_button"
        app:layout_constraintTop_toBottomOf="@+id/upw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="16sp"
        android:textColor="#4CAF50"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/find_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_user"
        android:textSize="16sp"
        android:textColor="#2196F3"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
